BO-1449: Fixed buttons visibility

--- a/Bundles/SalesMerchantPortalGui/src/Spryker/Zed/SalesMerchantPortalGui/Presentation/Components/app/manage-order/manage-order.component.less
+++ b/Bundles/SalesMerchantPortalGui/src/Spryker/Zed/SalesMerchantPortalGui/Presentation/Components/app/manage-order/manage-order.component.less
@@ -166,7 +166,7 @@
 
         &-row {
             display: flex;
-            align-items: center;
+            align-items: flex-start;;
             justify-content: space-between;
             margin: -@manage-order-grid-default-padding;
             padding-bottom: @manage-order-totals-item-indent-bottom;
